Revision history for C and Perl extension of nfdump.

1.04 2014-0x-xx
	- c: lnf_rec_fget, lnf_rec_fset incerased prtformance (30%) 
	  Thanks to Vasek Bartos.

1.03 2014-06-23
	- c: headers includes in the examples
	- c: code preparation for aggregation and sorting
	- perl: test for pure read withour record processing (-G)

1.02 2014-06-18
	- c: added structure lnf_brec1_t containing most commonly used records 
	- c: examples updated to use lnf_brec1_t
	- c: examples updated to be usable for benchmarking 
	- perl: updated build system (more resistant)
	- perl: benchmarking of c code added as the part of perl testing 

1.01 2014-06-15
	- source code strcitly separated into autonomous 
	  package (libnf-xxx, universal C API) and perl 
	  Net::NfDump module that is placed on top of the C API
	- resedigned build system 
	- prepared for new features (aggregation, sorting, ...) 
	- changes inspired by Vasek Bartos and his libnfdump code 

0.14 2014-04-24
	- examples updated to use last version of Net::IP::LPM

0.13 2014-04-20
	- adjusted to nfdump 1.6.12
	- support for new record type introdouced by nfdump 1.6.12
	- transparently reads record types from previous nfdump 
	- created files are always with the new record type 
	- !! files created by this version mus be read by nfdump >= 1.6.12
	- support for new fields (ingress_vrfid, egress_vrfid, event_flag
	  block_start, block_end, block_step, block_size)
	- flow_start item changed to event_time 
	- fw_event removed (use fw_xevent instead) 
	- doc extended with info about aggregation 

0.11 2013-11-26
	- adjusted to nfdump 1.6.11

0.10 2013-09-12
	- decreased test length 

0.09 2013-08-13
	- adjusted to nfdump 1.6.10p1

0.08 2013-06-06
	- removed bug in TimeWindowStart, thanks to Pavel Sejnoha

0.07 2013-05-21
	- removed bug in examples, thanks to James Deaton 
	- updated to nfdump 1.6.10

0.05 2013-05-03
	- language corrections

0.05 2013-03-16
	- silently skip known (but not supported) blocks 