@@ -69,106 +69,171 @@ char error_str[LNF_MAX_STRING];
 /* text description of the fields */
 lnf_field_t lnf_fields[] = {
 // pod:  =====================
-	{LNF_FLD_FIRST, 		"first",	"Timestamp of the first packet seen (in miliseconds)"},
-	{LNF_FLD_LAST,			"last",		"Timestamp of the last packet seen (in miliseconds)"},
-	{LNF_FLD_RECEIVED,		"received",	"Timestamp regarding when the packet was received by collector"},
+	{LNF_FLD_FIRST, 		LNF_AGGR_MIN,	LNF_SORT_ASC,	"first",	
+	"Timestamp of the first packet seen (in miliseconds)"},
+	{LNF_FLD_LAST,			LNF_AGGR_MAX,	LNF_SORT_ASC,	"last",		
+	"Timestamp of the last packet seen (in miliseconds)"},
+	{LNF_FLD_RECEIVED,		LNF_AGGR_MAX,	LNF_SORT_ASC,	"received",	
+	"Timestamp regarding when the packet was received by collector"},
 // pod:
 // pod:  Statistical items
 // pod:  =====================
-	{LNF_FLD_DOCTETS,		"bytes",	"The number of bytes"},
-	{LNF_FLD_DPKTS,			"pkts",		"The number of packets"},
-	{LNF_FLD_OUT_BYTES,		"outbytes",	"The number of output bytes"},
-	{LNF_FLD_OUT_PKTS,		"outpkts",	"The number of output packets"},
-	{LNF_FLD_AGGR_FLOWS,	"flows",	"The number of flows (aggregated)"},
+	{LNF_FLD_DOCTETS,		LNF_AGGR_SUM,	LNF_SORT_DESC,	"bytes",	
+	"The number of bytes"},
+	{LNF_FLD_DPKTS,			LNF_AGGR_SUM,	LNF_SORT_DESC,	"pkts",		
+	"The number of packets"},
+	{LNF_FLD_OUT_BYTES,		LNF_AGGR_SUM,	LNF_SORT_DESC,	"outbytes",	
+	"The number of output bytes"},
+	{LNF_FLD_OUT_PKTS,		LNF_AGGR_SUM,	LNF_SORT_DESC,	"outpkts",	
+	"The number of output packets"},
+	{LNF_FLD_AGGR_FLOWS,	LNF_AGGR_SUM,	LNF_SORT_DESC,	"flows",	
+	"The number of flows (aggregated)"},
 // pod:
 // pod:  Layer 4 information
 // pod:  =====================
-	{LNF_FLD_SRCPORT,		"srcport",		"Source port"},
-	{LNF_FLD_DSTPORT, 		"dstport",		"Destination port"},
-	{LNF_FLD_TCP_FLAGS,		"tcpflags",		"TCP flags"},
+	{LNF_FLD_SRCPORT,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"srcport",		
+	"Source port"},
+	{LNF_FLD_DSTPORT, 		LNF_AGGR_KEY,	LNF_SORT_ASC,	"dstport",		
+	"Destination port"},
+	{LNF_FLD_TCP_FLAGS,		LNF_AGGR_OR,	LNF_SORT_ASC,	"tcpflags",		
+	"TCP flags"},
 // pod:
 // pod:  Layer 3 information
 // pod:  =====================
-	{LNF_FLD_SRCADDR,		"srcip",		"Source IP address"},
-	{LNF_FLD_DSTADDR,		"dstip",		"Destination IP address"},
-	{LNF_FLD_IP_NEXTHOP,	"nexthop",		"IP next hop"},
-	{LNF_FLD_SRC_MASK,		"srcmask",		"Source mask"}, 
-	{LNF_FLD_DST_MASK,		"dstmask",		"Destination mask"}, 
-	{LNF_FLD_TOS,			"tos",			"Source type of service"}, 
-	{LNF_FLD_DST_TOS,		"dsttos",		"Destination type of service"},
-	{LNF_FLD_SRCAS,			"srcas",		"Source AS number"},
-	{LNF_FLD_DSTAS,			"dstas",		"Destination AS number"},
-	{LNF_FLD_BGPNEXTADJACENTAS,		"nextas",	"BGP Next AS"},
-	{LNF_FLD_BGPPREVADJACENTAS,		"prevas",	"BGP Previous AS"},
-	{LNF_FLD_BGP_NEXTHOP,			"bgpnexthop",	"BGP next hop"},
-	{LNF_FLD_PROT,			"proto",		"IP protocol"}, 
+	{LNF_FLD_SRCADDR,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"srcip",		
+	"Source IP address"},
+	{LNF_FLD_DSTADDR,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"dstip",		
+	"Destination IP address"},
+	{LNF_FLD_IP_NEXTHOP,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"nexthop",		
+	"IP next hop"},
+	{LNF_FLD_SRC_MASK,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"srcmask",		
+	"Source mask"}, 
+	{LNF_FLD_DST_MASK,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"dstmask",		
+	"Destination mask"}, 
+	{LNF_FLD_TOS,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"tos",			
+	"Source type of service"}, 
+	{LNF_FLD_DST_TOS,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"dsttos",		
+	"Destination type of service"},
+	{LNF_FLD_SRCAS,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"srcas",		
+	"Source AS number"},
+	{LNF_FLD_DSTAS,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"dstas",		
+	"Destination AS number"},
+	{LNF_FLD_BGPNEXTADJACENTAS,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"nextas",	
+	"BGP Next AS"},
+	{LNF_FLD_BGPPREVADJACENTAS,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"prevas",	
+	"BGP Previous AS"},
+	{LNF_FLD_BGP_NEXTHOP,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"bgpnexthop",	
+	"BGP next hop"},
+	{LNF_FLD_PROT,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"proto",		
+	"IP protocol"}, 
 // pod:
 // pod:  Layer 2 information
 // pod:  =====================
-	{LNF_FLD_SRC_VLAN,		"srcvlan",		"Source vlan label"},
-	{LNF_FLD_DST_VLAN,		"dstvlan",		"Destination vlan label"}, 
-	{LNF_FLD_IN_SRC_MAC,	"insrcmac",		"In source MAC address"},
-	{LNF_FLD_OUT_SRC_MAC,	"outsrcmac",	"Out destination MAC address"},
-	{LNF_FLD_IN_DST_MAC,	"indstmac",		"In destination MAC address"}, 
-	{LNF_FLD_OUT_DST_MAC,	"outdstmac",	"Out source MAC address"}, 
+	{LNF_FLD_SRC_VLAN,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"srcvlan",		
+	"Source vlan label"},
+	{LNF_FLD_DST_VLAN,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"dstvlan",		
+	"Destination vlan label"}, 
+	{LNF_FLD_IN_SRC_MAC,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"insrcmac",		
+	"In source MAC address"},
+	{LNF_FLD_OUT_SRC_MAC,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"outsrcmac",	
+	"Out destination MAC address"},
+	{LNF_FLD_IN_DST_MAC,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"indstmac",		
+	"In destination MAC address"}, 
+	{LNF_FLD_OUT_DST_MAC,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"outdstmac",	
+	"Out source MAC address"}, 
 // pod:
 // pod:  MPLS information
 // pod:  =====================
-	{LNF_FLD_MPLS_LABEL,	"mpls",		"MPLS labels"},
+	{LNF_FLD_MPLS_LABEL,	LNF_AGGR_KEY,	LNF_SORT_NONE,	"mpls",		
+	"MPLS labels"},
 // pod:
 // pod:  Layer 1 information
 // pod:  =====================
-	{LNF_FLD_INPUT,			"inif",		"SNMP input interface number"},
-	{LNF_FLD_OUTPUT,		"outif",	"SNMP output interface number"},
-	{LNF_FLD_DIR,			"dir",		"Flow directions ingress/egress"}, 
-	{LNF_FLD_FWD_STATUS,	"fwd",		"Forwarding status"},
+	{LNF_FLD_INPUT,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"inif",		
+	"SNMP input interface number"},
+	{LNF_FLD_OUTPUT,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"outif",	
+	"SNMP output interface number"},
+	{LNF_FLD_DIR,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"dir",		
+	"Flow directions ingress/egress"}, 
+	{LNF_FLD_FWD_STATUS,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"fwd",		
+	"Forwarding status"},
 // pod:
 // pod:  Exporter information
 // pod:  =====================
-	{LNF_FLD_IP_ROUTER,		"router",	"Exporting router IP"}, 
-	{LNF_FLD_ENGINE_TYPE,	"systype",	"Type of exporter"},
-	{LNF_FLD_ENGINE_ID,		"sysid",	"Internal SysID of exporter"},
+	{LNF_FLD_IP_ROUTER,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"router",	
+	"Exporting router IP"}, 
+	{LNF_FLD_ENGINE_TYPE,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"systype",	
+	"Type of exporter"},
+	{LNF_FLD_ENGINE_ID,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"sysid",	
+	"Internal SysID of exporter"},
 // pod:
 // pod:  NSEL fields, see: http://www.cisco.com/en/US/docs/security/asa/asa81/netflow/netflow.html
 // pod:  =====================
-	{LNF_FLD_EVENT_TIME,		"eventtime",	"NSEL The time that the flow was created"},
-	{LNF_FLD_CONN_ID,			"connid",		"NSEL An identifier of a unique flow for the device"},
-	{LNF_FLD_ICMP_CODE,			"icmpcode",		"NSEL ICMP code value"},
-	{LNF_FLD_ICMP_TYPE,			"icmptype",		"NSEL ICMP type value"},
-	{LNF_FLD_FW_XEVENT,			"xevent",		"NSEL Extended event code"},
-	{LNF_FLD_XLATE_SRC_IP,		"xsrcip",	"NSEL Mapped source IPv4 address"},
-	{LNF_FLD_XLATE_DST_IP,		"xdstip",	"NSEL Mapped destination IPv4 address"},
-	{LNF_FLD_XLATE_SRC_PORT,	"xsrcport",	"NSEL Mapped source port"},
-	{LNF_FLD_XLATE_DST_PORT,	"xdstport",	"NSEL Mapped destination port"},
+	{LNF_FLD_EVENT_TIME,		LNF_AGGR_MIN,	LNF_SORT_ASC,	"eventtime",	
+	"NSEL The time that the flow was created"},
+	{LNF_FLD_CONN_ID,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"connid",		
+	"NSEL An identifier of a unique flow for the device"},
+	{LNF_FLD_ICMP_CODE,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"icmpcode",		
+	"NSEL ICMP code value"},
+	{LNF_FLD_ICMP_TYPE,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"icmptype",		
+	"NSEL ICMP type value"},
+	{LNF_FLD_FW_XEVENT,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"xevent",		
+	"NSEL Extended event code"},
+	{LNF_FLD_XLATE_SRC_IP,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"xsrcip",	
+	"NSEL Mapped source IPv4 address"},
+	{LNF_FLD_XLATE_DST_IP,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"xdstip",	
+	"NSEL Mapped destination IPv4 address"},
+	{LNF_FLD_XLATE_SRC_PORT,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"xsrcport",	
+	"NSEL Mapped source port"},
+	{LNF_FLD_XLATE_DST_PORT,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"xdstport",	
+	"NSEL Mapped destination port"},
 // pod: NSEL The input ACL that permitted or denied the flow
-	{LNF_FLD_INGRESS_ACL_ID,	"iacl",		"Hash value or ID of the ACL name"},
-	{LNF_FLD_INGRESS_ACE_ID,	"iace", 	"Hash value or ID of the ACL name"},
-	{LNF_FLD_INGRESS_XACE_ID,	"ixace",	"Hash value or ID of an extended ACE configuration"},
+	{LNF_FLD_INGRESS_ACL_ID,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"iacl",		
+	"Hash value or ID of the ACL name"},
+	{LNF_FLD_INGRESS_ACE_ID,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"iace", 	
+	"Hash value or ID of the ACL name"},
+	{LNF_FLD_INGRESS_XACE_ID,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"ixace",	
+	"Hash value or ID of an extended ACE configuration"},
 // pod: NSEL The output ACL that permitted or denied a flow  
-	{LNF_FLD_EGRESS_ACL_ID,		"eacl",		"Hash value or ID of the ACL name"},
-	{LNF_FLD_EGRESS_ACE_ID,		"eace",		"Hash value or ID of the ACL name"},
-	{LNF_FLD_EGRESS_XACE_ID,	"exace",	"Hash value or ID of an extended ACE configuration"},
-	{LNF_FLD_USERNAME,			"username",	"NSEL username"},
+	{LNF_FLD_EGRESS_ACL_ID,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"eacl",		
+	"Hash value or ID of the ACL name"},
+	{LNF_FLD_EGRESS_ACE_ID,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"eace",		
+	"Hash value or ID of the ACL name"},
+	{LNF_FLD_EGRESS_XACE_ID,	LNF_AGGR_KEY,	LNF_SORT_ASC,	"exace",	
+	"Hash value or ID of an extended ACE configuration"},
+	{LNF_FLD_USERNAME,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"username",	
+	"NSEL username"},
 // pod:
 // pod:  NEL (NetFlow Event Logging) fields
 // pod:  =====================
-	{LNF_FLD_INGRESS_VRFID,		"ingressvrfid",		"NEL NAT ingress vrf id"},
-	{LNF_FLD_EVENT_FLAG,		"eventflag",		"NAT event flag (always set to 1 by nfdump)"},
-	{LNF_FLD_EGRESS_VRFID,		"egressvrfid",		"NAT egress VRF ID"},
-	{LNF_FLD_BLOCK_START,		"blockstart",		"NAT pool block start"},
+	{LNF_FLD_INGRESS_VRFID,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"ingressvrfid",		
+	"NEL NAT ingress vrf id"},
+	{LNF_FLD_EVENT_FLAG,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"eventflag",		
+	"NAT event flag (always set to 1 by nfdump)"},
+	{LNF_FLD_EGRESS_VRFID,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"egressvrfid",		
+	"NAT egress VRF ID"},
+	{LNF_FLD_BLOCK_START,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"blockstart",		
+	"NAT pool block start"},
 // pod:
 // pod:  NEL Port Block Allocation (added 2014-04-19)
 // pod:  =====================
-	{LNF_FLD_BLOCK_END,			"blockend",			"NAT pool block end"},
-	{LNF_FLD_BLOCK_STEP,		"blockstep",		"NAT pool block step"},
-	{LNF_FLD_BLOCK_SIZE,		"blocksize",		"NAT pool block size"},
+	{LNF_FLD_BLOCK_END,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"blockend",			
+	"NAT pool block end"},
+	{LNF_FLD_BLOCK_STEP,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"blockstep",		
+	"NAT pool block step"},
+	{LNF_FLD_BLOCK_SIZE,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"blocksize",		
+	"NAT pool block size"},
 // pod:
 // pod:  Extra/special fields
 // pod:  =====================
-	{LNF_FLD_CLIENT_NW_DELAY_USEC,		"cl",	"nprobe latency client_nw_delay_usec"},
-	{LNF_FLD_SERVER_NW_DELAY_USEC,		"sl",	"nprobe latency server_nw_delay_usec"},
-	{LNF_FLD_APPL_LATENCY_USEC,			"al",	"nprobe latency appl_latency_usec"},
-	{LNF_FLD_ZERO,						NULL,	NULL}
+	{LNF_FLD_CLIENT_NW_DELAY_USEC,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"cl",	
+	"nprobe latency client_nw_delay_usec"},
+	{LNF_FLD_SERVER_NW_DELAY_USEC,		LNF_AGGR_KEY,	LNF_SORT_ASC,	"sl",	
+	"nprobe latency server_nw_delay_usec"},
+	{LNF_FLD_APPL_LATENCY_USEC,			LNF_AGGR_KEY,	LNF_SORT_ASC,	"al",	
+	"nprobe latency appl_latency_usec"},
+	{LNF_FLD_ZERO,						0,				0,				NULL,	
+	NULL}
 };
 
 
