@@ -29,7 +29,7 @@ while (my ($opts, $name) = each %ctests) {
 
 	$tm1 = time();
 	system("libnf/examples/lnf_ex02_reader $opts");
-	my $tm2 = time() - $tm1;
+	my $tm2 = time() - $tm1 + 1;
 
 	diag sprintf("  %s (%s): %d recs in %d secs (%d/sec)", $name, $opts, $recs, $tm2, $recs/$tm2);
 }
